--- a/src/less/utilities/interface.less
+++ b/src/less/utilities/interface.less
@@ -2,20 +2,20 @@
 
 // text selection
 
-.@{utilityPrefix}slct-none { .mixin-userSelectNone !important; }
+.slct-none { .mixin-userSelectNone !important; }
 
 // pointer events
 
-.@{utilityPrefix}pntr-auto { pointer-events: auto !important; }
-.@{utilityPrefix}pntr-none { pointer-events: none !important; }
+.pntr-auto { pointer-events: auto !important; }
+.pntr-none { pointer-events: none !important; }
 
 // scroll
 
-.@{utilityPrefix}scrl-x { overflow: hidden !important; overflow-x: auto !important; }
-.@{utilityPrefix}scrl-y { overflow: hidden !important; overflow-y: auto !important; }
+.scrl-x { overflow: hidden !important; overflow-x: auto !important; }
+.scrl-y { overflow: hidden !important; overflow-y: auto !important; }
 
 // focus
 
-.@{utilityPrefix}focus          { .mixin-defaultFocus !important; }
-.@{utilityPrefix}tabFocus       { .mixin-tabFocus !important; }
-.@{utilityPrefix}tabFocus-inset { .mixin-tabFocus-inset !important; }
+.focus          { .mixin-defaultFocus !important; }
+.tabFocus       { .mixin-tabFocus !important; }
+.tabFocus-inset { .mixin-tabFocus-inset !important; }
