--- a/src/less/utilities/spacing-responsive.less
+++ b/src/less/utilities/spacing-responsive.less
@@ -14,57 +14,53 @@
 
         // margin (positive values)
 
-        .@{utilityPrefix}@{bpPrefix}--m-@{i}         { margin:        @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-t-@{i}       { margin-top:    @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-r-@{i}       { margin-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-b-@{i}       { margin-bottom: @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-l-@{i}       { margin-left:   @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-tr-@{i}      { margin-top:    @product !important; margin-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-br-@{i}      { margin-bottom: @product !important; margin-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-bl-@{i}      { margin-bottom: @product !important; margin-left:   @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-tb-@{i}      { margin-top:    @product !important; margin-bottom: @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-lr-@{i}      { margin-left:   @product !important; margin-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-tl-@{i}      { margin-top:    @product !important; margin-left:   @product !important; }
+        .@{bpPrefix}--m-@{i}         { margin:        @product !important; }
+        .@{bpPrefix}--m-t-@{i}       { margin-top:    @product !important; }
+        .@{bpPrefix}--m-r-@{i}       { margin-right:  @product !important; }
+        .@{bpPrefix}--m-b-@{i}       { margin-bottom: @product !important; }
+        .@{bpPrefix}--m-l-@{i}       { margin-left:   @product !important; }
+        .@{bpPrefix}--m-tr-@{i}      { margin-top:    @product !important; margin-right:  @product !important; }
+        .@{bpPrefix}--m-br-@{i}      { margin-bottom: @product !important; margin-right:  @product !important; }
+        .@{bpPrefix}--m-bl-@{i}      { margin-bottom: @product !important; margin-left:   @product !important; }
+        .@{bpPrefix}--m-tb-@{i}      { margin-top:    @product !important; margin-bottom: @product !important; }
+        .@{bpPrefix}--m-lr-@{i}      { margin-left:   @product !important; margin-right:  @product !important; }
+        .@{bpPrefix}--m-tl-@{i}      { margin-top:    @product !important; margin-left:   @product !important; }
 
         // margin (negative values)
 
-        .@{utilityPrefix}@{bpPrefix}--m-neg-@{i}     { margin:        @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-t-neg-@{i}   { margin-top:    @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-r-neg-@{i}   { margin-right:  @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-b-neg-@{i}   { margin-bottom: @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-l-neg-@{i}   { margin-left:   @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-tr-neg-@{i}  { margin-top:    @product * -1 !important; margin-right:  @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-br-neg-@{i}  { margin-bottom: @product * -1 !important; margin-right:  @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-bl-neg-@{i}  { margin-bottom: @product * -1 !important; margin-left:   @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-tb-neg-@{i}  { margin-top:    @product * -1 !important; margin-bottom: @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-lr-neg-@{i}  { margin-left:   @product * -1 !important; margin-right:  @product * -1 !important; }
-        .@{utilityPrefix}@{bpPrefix}--m-tl-neg-@{i}  { margin-top:    @product * -1 !important; margin-left:   @product * -1 !important; }
+        .@{bpPrefix}--m-neg-@{i}     { margin:        @product * -1 !important; }
+        .@{bpPrefix}--m-t-neg-@{i}   { margin-top:    @product * -1 !important; }
+        .@{bpPrefix}--m-r-neg-@{i}   { margin-right:  @product * -1 !important; }
+        .@{bpPrefix}--m-b-neg-@{i}   { margin-bottom: @product * -1 !important; }
+        .@{bpPrefix}--m-l-neg-@{i}   { margin-left:   @product * -1 !important; }
+        .@{bpPrefix}--m-tr-neg-@{i}  { margin-top:    @product * -1 !important; margin-right:  @product * -1 !important; }
+        .@{bpPrefix}--m-br-neg-@{i}  { margin-bottom: @product * -1 !important; margin-right:  @product * -1 !important; }
+        .@{bpPrefix}--m-bl-neg-@{i}  { margin-bottom: @product * -1 !important; margin-left:   @product * -1 !important; }
+        .@{bpPrefix}--m-tb-neg-@{i}  { margin-top:    @product * -1 !important; margin-bottom: @product * -1 !important; }
+        .@{bpPrefix}--m-lr-neg-@{i}  { margin-left:   @product * -1 !important; margin-right:  @product * -1 !important; }
+        .@{bpPrefix}--m-tl-neg-@{i}  { margin-top:    @product * -1 !important; margin-left:   @product * -1 !important; }
 
         // padding
 
-        .@{utilityPrefix}@{bpPrefix}--p-@{i}         { padding:        @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-t-@{i}       { padding-top:    @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-r-@{i}       { padding-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-b-@{i}       { padding-bottom: @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-l-@{i}       { padding-left:   @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-tr-@{i}      { padding-top:    @product !important; padding-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-br-@{i}      { padding-bottom: @product !important; padding-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-bl-@{i}      { padding-bottom: @product !important; padding-left:   @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-tb-@{i}      { padding-top:    @product !important; padding-bottom: @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--p-lr-@{i}      { padding-left:   @product !important; padding-right:  @product !important; }
-        .@{utilityPrefix}@{bpPrefix}--ptl-@{i}       { padding-top:    @product !important; padding-left:   @product !important; }
+        .@{bpPrefix}--p-@{i}         { padding:        @product !important; }
+        .@{bpPrefix}--p-t-@{i}       { padding-top:    @product !important; }
+        .@{bpPrefix}--p-r-@{i}       { padding-right:  @product !important; }
+        .@{bpPrefix}--p-b-@{i}       { padding-bottom: @product !important; }
+        .@{bpPrefix}--p-l-@{i}       { padding-left:   @product !important; }
+        .@{bpPrefix}--p-tr-@{i}      { padding-top:    @product !important; padding-right:  @product !important; }
+        .@{bpPrefix}--p-br-@{i}      { padding-bottom: @product !important; padding-right:  @product !important; }
+        .@{bpPrefix}--p-bl-@{i}      { padding-bottom: @product !important; padding-left:   @product !important; }
+        .@{bpPrefix}--p-tb-@{i}      { padding-top:    @product !important; padding-bottom: @product !important; }
+        .@{bpPrefix}--p-lr-@{i}      { padding-left:   @product !important; padding-right:  @product !important; }
+        .@{bpPrefix}--ptl-@{i}       { padding-top:    @product !important; padding-left:   @product !important; }
 
     }
     .generate_margin_padding(@responsiveSpacingSteps);
 
-    .@{utilityPrefix}@{bpPrefix}--m-0 { margin: 0 !important; }
-    .@{utilityPrefix}@{bpPrefix}--p-0 { padding: 0 !important; }
+    .@{bpPrefix}--m-0       { .m-0; }
+    .@{bpPrefix}--p-0       { .p-0; }
+    .@{bpPrefix}--m-lr-auto { .m-lr-auto; }
 
-    .@{utilityPrefix}@{bpPrefix}--m-lr-auto {
-        margin-right: auto !important;
-        margin-left: auto !important;
-    }
-    
 }
 
 // small
