--- a/src/less/utilities/typography-interactive.less
+++ b/src/less/utilities/typography-interactive.less
@@ -1,4 +1,4 @@
 /** typography-interactive.less */
 
-.@{utilityPrefix}hvr--tdcr-none:hover { text-decoration: none !important; }
-.@{utilityPrefix}hvr--tdcr-undl:hover { text-decoration: underline !important; }
+.hvr--tdcr-none:hover { .tdcr-none; }
+.hvr--tdcr-undl:hover { .tdcr-undl; }
