--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -6,39 +6,39 @@
 
     // font-size
 
-    .@{utilityPrefix}@{bpPrefix}--fs-0 { @fs-0(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-1 { @fs-1(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-2 { @fs-2(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-3 { @fs-3(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-4 { @fs-4(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-5 { @fs-5(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-6 { @fs-6(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-7 { @fs-7(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-8 { @fs-8(); }
-    .@{utilityPrefix}@{bpPrefix}--fs-9 { @fs-9(); }
+    .@{bpPrefix}--fs-0 { .fs-0; }
+    .@{bpPrefix}--fs-1 { .fs-1; }
+    .@{bpPrefix}--fs-2 { .fs-2; }
+    .@{bpPrefix}--fs-3 { .fs-3; }
+    .@{bpPrefix}--fs-4 { .fs-4; }
+    .@{bpPrefix}--fs-5 { .fs-5; }
+    .@{bpPrefix}--fs-6 { .fs-6; }
+    .@{bpPrefix}--fs-7 { .fs-7; }
+    .@{bpPrefix}--fs-8 { .fs-8; }
+    .@{bpPrefix}--fs-9 { .fs-9; }
 
     // line-height
 
-    .@{utilityPrefix}@{bpPrefix}--lh-0 { @lh-0(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-1 { @lh-1(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-2 { @lh-2(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-3 { @lh-3(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-4 { @lh-4(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-5 { @lh-5(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-6 { @lh-6(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-7 { @lh-7(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-8 { @lh-8(); }
-    .@{utilityPrefix}@{bpPrefix}--lh-9 { @lh-9(); }
+    .@{bpPrefix}--lh-0 { .lh-0; }
+    .@{bpPrefix}--lh-1 { .lh-1; }
+    .@{bpPrefix}--lh-2 { .lh-2; }
+    .@{bpPrefix}--lh-3 { .lh-3; }
+    .@{bpPrefix}--lh-4 { .lh-4; }
+    .@{bpPrefix}--lh-5 { .lh-5; }
+    .@{bpPrefix}--lh-6 { .lh-6; }
+    .@{bpPrefix}--lh-7 { .lh-7; }
+    .@{bpPrefix}--lh-8 { .lh-8; }
+    .@{bpPrefix}--lh-9 { .lh-9; }
 
     // text alignment
 
-    .@{utilityPrefix}@{bpPrefix}--al-r { @al-r(); }
-    .@{utilityPrefix}@{bpPrefix}--al-l { @al-l(); }
-    .@{utilityPrefix}@{bpPrefix}--al-c { @al-c(); }
+    .@{bpPrefix}--al-r { .al-r; }
+    .@{bpPrefix}--al-l { .al-l; }
+    .@{bpPrefix}--al-c { .al-c; }
 
     // line-break
 
-    .@{utilityPrefix}@{bpPrefix}--lbr-none { @lbr-none(); }
+    .@{bpPrefix}--lbr-none { .lbr-none; }
 
 }
 
