--- a/src/less/utilities/grid-responsive.less
+++ b/src/less/utilities/grid-responsive.less
@@ -16,185 +16,51 @@
     
     // flex layout
 
-    .@{utilityPrefix}@{bpPrefix}--flex-wrap                   { flex-wrap: wrap !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-noWrap                 { flex-wrap: nowrap !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-wrapReverse            { flex-wrap: wrap-reverse !important; }
+    .@{bpPrefix}--flex-wrap        { .flex-wrap; }
+    .@{bpPrefix}--flex-noWrap      { .flex-noWrap; }
+    .@{bpPrefix}--flex-wrapReverse { .flex-wrapReverse; }
                               
-    .@{utilityPrefix}@{bpPrefix}--flex-directionRow           { flex-direction: row !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-directionRowReverse    { flex-direction: row-reverse !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-directionColumn        { flex-direction: column !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-directionColumnReverse { flex-direction: column-reverse !important; }
+    .@{bpPrefix}--flex-directionRow           { .flex-directionRow; }
+    .@{bpPrefix}--flex-directionRowReverse    { .flex-directionRowReverse; }
+    .@{bpPrefix}--flex-directionColumn        { .flex-directionColumn; }
+    .@{bpPrefix}--flex-directionColumnReverse { .flex-directionColumnReverse; }
 
-    .@{utilityPrefix}@{bpPrefix}--flex-alignStart { align-items: flex-start !important; }
+    .@{bpPrefix}--flex-alignStart        { .flex-alignStart; }
+    .@{bpPrefix}--flex-alignEnd          { .flex-alignEnd; }
+    .@{bpPrefix}--flex-alignCenter       { .flex-alignCenter; }
+    .@{bpPrefix}--flex-alignBaseline     { .flex-alignBaseline; }
+    .@{bpPrefix}--flex-aligncontentStart { .flex-alignContentStart; }
+    .@{bpPrefix}--flex-alignContentEnd   { .flex-alignContentEnd; }
 
-    .@{utilityPrefix}@{bpPrefix}--flex-alignEnd { align-items: flex-end !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignEnd {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            vertical-align: bottom !important;
-        }
-    }
+    .@{bpPrefix}--flex-alignContentCenter       { .flex-alignContentCenter; }
+    .@{bpPrefix}--flex-alignContentSpaceBetween { .flex-alignContentSpaceBetween; }
+    .@{bpPrefix}--flex-alignContentSpaceAround  { .flex-alignContentSpaceAround; }
+    
+    .@{bpPrefix}--flex-alignSelfStretch  { .flex-alignSelfStretch; }
+    .@{bpPrefix}--flex-alignSelfStart    { .flex-alignSelfStart; }
+    .@{bpPrefix}--flex-alignSelfEnd      { .flex-alignSelfEnd; }
+    .@{bpPrefix}--flex-alignSelfCenter   { .flex-alignSelfCenter; }
+    .@{bpPrefix}--flex-alignSelfBaseline { .flex-alignSelfBaseline; }
 
-    .@{utilityPrefix}@{bpPrefix}--flex-alignCenter { align-items: center !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignCenter {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            vertical-align: middle !important;
-        }
-    }
 
-    .@{utilityPrefix}@{bpPrefix}--flex-alignBaseline { align-items: baseline !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignBaseline {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            vertical-align: baseline !important;
-        }
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-aligncontentStart { align-content: flex-start !important; }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-alignContentEnd { align-content: flex-end !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignContentEnd {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            vertical-align: bottom !important;
-        }
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-alignContentCenter        { align-content: center !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignContentSpaceBetween  { align-content: space-between !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignContentSpaceAround   { align-content: space-around !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignSelfStretch          { align-self: stretch !important; }
-    .@{utilityPrefix}@{bpPrefix}--flex-alignSelfStart            { align-self: flex-start !important; }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-alignSelfEnd {
-      align-self: flex-end !important;
-      vertical-align: bottom !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-alignSelfCenter {
-      align-self: center !important;
-      vertical-align: middle !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-alignSelfBaseline {
-      align-self: baseline !important;
-      vertical-align: baseline !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifyStart {
-      text-align: left !important;
-      justify-content: flex-start !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifyEnd {
-      text-align: right !important;
-      text-align-last: right !important;
-      justify-content: flex-end !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifyEnd {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifyCenter {
-      text-align: center !important;
-      text-align-last: center !important;
-      justify-content: center !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifyCenter {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifySpaceBetween {
-      text-align: justify !important;
-      text-align-last: justify !important;
-      justify-content: space-between !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifySpaceBetween {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifySpaceAround {
-      text-align: justify !important;
-      text-align-last: justify !important;
-      justify-content: space-around !important;
-    }
-
-    .@{utilityPrefix}@{bpPrefix}--flex-justifySpaceAround {
-        [class*="w-1-"],
-        [class*="w-2-"],
-        [class*="w-3-"],
-        [class*="w-4-"],
-        [class*="w-5-"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
+    .@{bpPrefix}--flex-justifyStart        { .flex-justifyStart; }
+    .@{bpPrefix}--flex-justifyEnd          { .flex-justifyEnd; }
+    .@{bpPrefix}--flex-justifyCenter       { .flex-justifyCenter; }
+    .@{bpPrefix}--flex-justifySpaceBetween { .flex-justifySpaceBetween; }
+    .@{bpPrefix}--flex-justifySpaceAround  { .flex-justifySpaceAround; }
 
     // flex order
 
-    .@{utilityPrefix}@{bpPrefix}--flex-1  { order: 1; }
-    .@{utilityPrefix}@{bpPrefix}--flex-2  { order: 2; }
-    .@{utilityPrefix}@{bpPrefix}--flex-3  { order: 3; }
-    .@{utilityPrefix}@{bpPrefix}--flex-4  { order: 4; }
-    .@{utilityPrefix}@{bpPrefix}--flex-5  { order: 5; }
-    .@{utilityPrefix}@{bpPrefix}--flex-6  { order: 6; }
-    .@{utilityPrefix}@{bpPrefix}--flex-7  { order: 7; }
-    .@{utilityPrefix}@{bpPrefix}--flex-8  { order: 8; }
-    .@{utilityPrefix}@{bpPrefix}--flex-9  { order: 9; }
-    .@{utilityPrefix}@{bpPrefix}--flex-10 { order: 10; }
+    .@{bpPrefix}--flex-1  { .flex-1; }
+    .@{bpPrefix}--flex-2  { .flex-2; }
+    .@{bpPrefix}--flex-3  { .flex-3; }
+    .@{bpPrefix}--flex-4  { .flex-4; }
+    .@{bpPrefix}--flex-5  { .flex-5; }
+    .@{bpPrefix}--flex-6  { .flex-6; }
+    .@{bpPrefix}--flex-7  { .flex-7; }
+    .@{bpPrefix}--flex-8  { .flex-8; }
+    .@{bpPrefix}--flex-9  { .flex-9; }
+    .@{bpPrefix}--flex-10 { .flex-10; }
 
 }
 
