--- a/src/less/utilities/opacity-interactive.less
+++ b/src/less/utilities/opacity-interactive.less
@@ -1,12 +1,12 @@
 /** opacity-interactive.less */
 
-.@{utilityPrefix}hvr--opacity-full:hover { opacity: 1 !important; }
-.@{utilityPrefix}hvr--opacity-9:hover    { opacity: .9 !important; }
-.@{utilityPrefix}hvr--opacity-8:hover    { opacity: .8 !important; }
-.@{utilityPrefix}hvr--opacity-7:hover    { opacity: .7 !important; }
-.@{utilityPrefix}hvr--opacity-6:hover    { opacity: .6 !important; }
-.@{utilityPrefix}hvr--opacity-5:hover    { opacity: .5 !important; }
-.@{utilityPrefix}hvr--opacity-4:hover    { opacity: .4 !important; }
-.@{utilityPrefix}hvr--opacity-3:hover    { opacity: .3 !important; }
-.@{utilityPrefix}hvr--opacity-2:hover    { opacity: .2 !important; }
-.@{utilityPrefix}hvr--opacity-1:hover    { opacity: .1 !important; }
+.hvr--opacity-full:hover { .opacity-full; }
+.hvr--opacity-9:hover    { .opacity-9; }
+.hvr--opacity-8:hover    { .opacity-8; }
+.hvr--opacity-7:hover    { .opacity-7; }
+.hvr--opacity-6:hover    { .opacity-6; }
+.hvr--opacity-5:hover    { .opacity-5; }
+.hvr--opacity-4:hover    { .opacity-4; }
+.hvr--opacity-3:hover    { .opacity-3; }
+.hvr--opacity-2:hover    { .opacity-2; }
+.hvr--opacity-1:hover    { .opacity-1; }
