--- a/src/less/utilities/sizing-base.less
+++ b/src/less/utilities/sizing-base.less
@@ -2,49 +2,49 @@
 
 // fractional width
 
-.@{utilityPrefix}w-1-1,
-.@{utilityPrefix}w-1-2,
-.@{utilityPrefix}w-1-3,
-.@{utilityPrefix}w-1-4,
-.@{utilityPrefix}w-1-5,
-.@{utilityPrefix}w-1-6,
-.@{utilityPrefix}w-2-3,
-.@{utilityPrefix}w-2-5,
-.@{utilityPrefix}w-3-4,
-.@{utilityPrefix}w-3-5,
-.@{utilityPrefix}w-4-5,
-.@{utilityPrefix}w-auto {
+.w-1-1,
+.w-1-2,
+.w-1-3,
+.w-1-4,
+.w-1-5,
+.w-1-6,
+.w-2-3,
+.w-2-5,
+.w-3-4,
+.w-3-5,
+.w-4-5,
+.w-auto {
     box-sizing: border-box !important;
 }
 
-.@{utilityPrefix}w-1-1 { width: 100% !important; }
-.@{utilityPrefix}w-1-2, .@{utilityPrefix}w-2-4, .@{utilityPrefix}w-3-6 { width: 50% !important; }
-.@{utilityPrefix}w-1-3 { width: 33.3% !important; }
-.@{utilityPrefix}w-1-4 { width: 25% !important; }
-.@{utilityPrefix}w-1-5 { width: 20% !important; }
-.@{utilityPrefix}w-1-6 { width: 16.6% !important; }
-.@{utilityPrefix}w-2-3, .@{utilityPrefix}w-4-6 { width: 66.6% !important; }
-.@{utilityPrefix}w-2-5 { width: 40% !important; }
-.@{utilityPrefix}w-3-4 { width: 75% !important; }
-.@{utilityPrefix}w-3-5 { width: 60% !important; }
-.@{utilityPrefix}w-4-5 { width: 80% !important; }
-.@{utilityPrefix}w-5-6 { width: 83.3% !important; }
+.w-1-1 { width: 100% !important; }
+.w-1-2, .w-2-4, .w-3-6 { width: 50% !important; }
+.w-1-3 { width: 33.3% !important; }
+.w-1-4 { width: 25% !important; }
+.w-1-5 { width: 20% !important; }
+.w-1-6 { width: 16.6% !important; }
+.w-2-3, .w-4-6 { width: 66.6% !important; }
+.w-2-5 { width: 40% !important; }
+.w-3-4 { width: 75% !important; }
+.w-3-5 { width: 60% !important; }
+.w-4-5 { width: 80% !important; }
+.w-5-6 { width: 83.3% !important; }
 
 // auto width
 
-.@{utilityPrefix}w-auto { width: auto; }
+.w-auto { width: auto; }
 
 // fixed width & height
 
 .generate_width_height (@i) when (@i > 0) {
     .generate_width_height((@i - 1));
 
-    .@{utilityPrefix}w-@{i} {
+    .w-@{i} {
         width:  1rem * @i !important;
         box-sizing: border-box !important;
     }
 
-    .@{utilityPrefix}h-@{i} {
+    .h-@{i} {
         height: 1rem * @i !important;
         box-sizing: border-box !important;
     }
