--- a/src/less/utilities/sizing-responsive.less
+++ b/src/less/utilities/sizing-responsive.less
@@ -6,43 +6,43 @@
 
     // fractional width
 
-    .@{utilityPrefix}@{bpPrefix}--w-1-1,
-    .@{utilityPrefix}@{bpPrefix}--w-1-2,
-    .@{utilityPrefix}@{bpPrefix}--w-1-3,
-    .@{utilityPrefix}@{bpPrefix}--w-1-4,
-    .@{utilityPrefix}@{bpPrefix}--w-1-5,
-    .@{utilityPrefix}@{bpPrefix}--w-1-6,
-    .@{utilityPrefix}@{bpPrefix}--w-2-3,
-    .@{utilityPrefix}@{bpPrefix}--w-2-5,
-    .@{utilityPrefix}@{bpPrefix}--w-3-4,
-    .@{utilityPrefix}@{bpPrefix}--w-3-5,
-    .@{utilityPrefix}@{bpPrefix}--w-4-5,
-    .@{utilityPrefix}@{bpPrefix}--w-auto {
+    .@{bpPrefix}--w-1-1,
+    .@{bpPrefix}--w-1-2,
+    .@{bpPrefix}--w-1-3,
+    .@{bpPrefix}--w-1-4,
+    .@{bpPrefix}--w-1-5,
+    .@{bpPrefix}--w-1-6,
+    .@{bpPrefix}--w-2-3,
+    .@{bpPrefix}--w-2-5,
+    .@{bpPrefix}--w-3-4,
+    .@{bpPrefix}--w-3-5,
+    .@{bpPrefix}--w-4-5,
+    .@{bpPrefix}--w-auto {
         box-sizing: border-box !important;
     }
 
-    .@{utilityPrefix}@{bpPrefix}--w-1-1 { width: 100% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-1-2 { width: 50% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-1-3 { width: 33.33% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-1-4 { width: 25% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-1-5 { width: 20% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-1-6 { width: 16.67% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-2-3 { width: 66.67% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-2-5 { width: 40% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-3-4 { width: 75% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-3-5 { width: 60% !important; }
-    .@{utilityPrefix}@{bpPrefix}--w-4-5 { width: 80% !important; }
+    .@{bpPrefix}--w-1-1 { .w-1-1; }
+    .@{bpPrefix}--w-1-2 { .w-1-2; }
+    .@{bpPrefix}--w-1-3 { .w-1-3; }
+    .@{bpPrefix}--w-1-4 { .w-1-4; }
+    .@{bpPrefix}--w-1-5 { .w-1-5; }
+    .@{bpPrefix}--w-1-6 { .w-1-6; }
+    .@{bpPrefix}--w-2-3 { .w-2-3; }
+    .@{bpPrefix}--w-2-5 { .w-2-5; }
+    .@{bpPrefix}--w-3-4 { .w-3-4; }
+    .@{bpPrefix}--w-3-5 { .w-3-5; }
+    .@{bpPrefix}--w-4-5 { .w-4-5; }
 
     // auto width
 
-    .@{utilityPrefix}@{bpPrefix}--w-auto { width: auto !important; }
+    .@{bpPrefix}--w-auto { width: auto !important; }
 
     // fixed width & height
 
     .generate_width_height (@i) when (@i > 0) {
         .generate_width_height((@i - 1));
-        .@{utilityPrefix}@{bpPrefix}--w-@{i} { width:  1rem * @i !important; }
-        .@{utilityPrefix}@{bpPrefix}--h-@{i} { height: 1rem * @i !important; }
+        .@{bpPrefix}--w-@{i} { width:  1rem * @i !important; }
+        .@{bpPrefix}--h-@{i} { height: 1rem * @i !important; }
     }
     .generate_width_height(@responsiveSizingSteps);
 
