--- a/src/less/utilities/transition.less
+++ b/src/less/utilities/transition.less
@@ -1,4 +1,4 @@
 /** transition.less */
 
-.@{utilityPrefix}tween-fast { transition: all 100ms ease-out !important; }
-.@{utilityPrefix}tween-slow { transition: all 400ms ease-out !important; }
+.tween-fast { transition: all 100ms ease-out !important; }
+.tween-slow { transition: all 400ms ease-out !important; }
